# tauri-axum-iroh-agent

./: Cargo.toml  ChatGPT风格聊天界面.md  RustAIAgent模块重构.md  irohP2P文件传输模块重构.md  readme.md
.codebuddy/: analysis-summary.json
.kiro/specs/goose-agent-chat/: design.md  requirements.md  tasks.md
.kiro/specs/rig-agent-fix/: design.md  requirements.md  tasks.md
axum-app/: Cargo.toml
axum-app/src/: chat_routes.rs  iroh_routes.rs  lib.rs  main.rs  routes.rs  styles.css  todo.rs
axum-app/static/: chat-test.html  iroh-test.html
goose-lib/: Cargo.toml
goose-lib/src/: lib.rs
iroh-node/: ARCHITECTURE_REVIEW.md  CHAT_USAGE.md  Cargo.toml  README.md  fix_compilation.md  test_simple.sh
iroh-node/examples/: advanced_chat.rs  axum_example.rs  basic_test.rs  chat_usage.rs  minimal_chat.rs  simple_chat.rs  simple_example.rs  standalone_usage.rs  tauri_example.rs
iroh-node/scripts/: test_chat.sh
iroh-node/src/: config.rs  error.rs  lib.rs  lib_backup.rs  main.rs  p2p.rs
iroh-node/src/adapters/: axum.rs  axum_adapter.rs  mod.rs  standalone.rs  tauri.rs  tauri_adapter.rs
iroh-node/src/core/: chat.rs  chat_client.rs  client.rs  error.rs  integrated_client.rs  mod.rs  progress.rs  tests.rs  types.rs
rig-agent/: Cargo.toml  MULTI_CLIENT_AGENT.md  README.md
rig-agent/benches/: agent_benchmarks.rs
rig-agent/examples/: agent_usage_example.rs  multi_client.rs  multi_client_agent.rs  multi_provider_usage.rs  rig_core_example.rs  simple_chat.rs
rig-agent/src/: error.rs  lib.rs  rig.xml  tools.rs
rig-agent/src/adapters/: axum_adapter.rs  mod.rs  standalone.rs  tauri_adapter.rs
rig-agent/src/core/: agent.rs  mod.rs  types.rs
rig-agent/tests/: integration_tests.rs
tauri-app/: bun.lockb  package-lock.json  package.json
tauri-app/src/: App.svelte  app.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  lib.rs
tauri-app/src-tauri/src/commands/: agent.rs  iroh.rs  mod.rs
tauri-app/src/lib/: agent-types.ts
tauri-app/src/lib/components/: AgentChat.svelte  AgentConfigPanel.svelte
tauri-app/src/lib/components/chat/: MessageBubble.svelte  MessageInput.svelte  MessageList.svelte
tauri-app/src/lib/stores/: chatStore.ts
tauri-app/src/lib/types/: chat.ts
tauri-app/src/routes/: +page.svelte
