[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-app"
path = "src/main.rs"

[lib]
name = "axum_app"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
iroh-node = { path = "../iroh-node" }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
