[package]
name = "goose-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "goose_lib"
path = "src/lib.rs"

[dependencies]
goose = { git = "https://github.com/block/goose.git", branch = "main" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
once_cell = "1.18"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tokio-stream = "0.1"
