[package]
name = "iroh-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iroh-node"
path = "src/main.rs"

[lib]
name = "iroh_node"
path = "src/lib.rs"

[features]
default = []
tauri-compat = ["tauri"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
data-encoding = "2.9"
dumbpipe = "0.28"
futures-lite = "2.6"
iroh = "0.90"
iroh-blobs = "0.91"
iroh-docs = "0.35.0"
iroh-gossip = "0.90"
iroh-node-util = "0.35"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
tokio-stream = "0.1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs-next = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
bytes = "1.0"

# 可选依赖
tauri = { version = "2.7", optional = true }
