[package]
name = "iroh-node"
version = "0.1.0"
edition = "2021"
description = "简化的iroh-gossip通信中心，用于在tauri和axum中集成，并与rig-agent服务交互"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# iroh核心依赖
iroh-net = { version = "0.12.0", features = ["full"] }
iroh-gossip = "0.12.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }

# rig-agent依赖
rig-agent = { path = "../rig-agent" }

# 序列化/反序列化
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
postcard = { version = "1.0.8", features = ["use-std"] }
data-encoding = "2.4.0"

# 异步运行时
tokio = { version = "1.32.0", features = ["full"] }
futures-lite = "1.13.0"

# 日志和错误处理
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.49"

# 工具库
bytes = "1.5.0"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }

# Tauri集成
tauri = { version = "2.7", optional = true }

# Axum集成
axum = { version = "0.6.20", optional = true, features = ["headers"] }
tower-http = { version = "0.4.4", features = ["cors"], optional = true }

[features]
default = []
tauri-plugin = ["tauri"]
tauri-compat = ["tauri"]  # 添加与tauri-app兼容的特性名称
axum-adapter = ["axum", "tower-http"]
full = ["tauri-plugin", "tauri-compat", "axum-adapter"]

[[example]]
name = "tauri_example"
required-features = ["tauri-plugin"]

[[example]]
name = "axum_example"
required-features = ["axum-adapter"]

[dev-dependencies]
tauri = { version = "2.7.0" }
axum = { version = "0.6.20" }
tower-http = { version = "0.4.4", features = ["cors"] }
