[package]
name = "rig-agent"
version = "0.1.0"
edition = "2024"

[[example]]
name = "multi_client_agent"
path = "examples/multi_client_agent.rs"

[lib]
name = "rig_agent"
path = "src/lib.rs"

[dependencies]
rig-core = "0.17.1"
# AI 提供商支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

# 异步和流处理
futures = "0.3"

# Tauri 支持（可选）
tauri = { version = "2.7", optional = true }

tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs"] }
tokio-stream = { version = "0.1", optional = true }
reqwest = { version = "0.12", optional = true, features = ["json"] }
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tracing-test = "0.2"
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[bench]]
name = "agent_benchmarks"
harness = false

[features]
default = []
tauri-support = ["tauri"]
