[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-axum-htmx = { git = "https://github.com/logankeenan/tauri-axum-htmx", branch = "main" }
axum-app = { path = "../../axum-app", version = "0.1.0" }
axum = "0.8.4"
tower-service = "0.3.3"
thiserror = "2.0.12"
iroh-node = { path = "../../iroh-node", features = ["tauri-compat"] }
tokio = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs-next = "2.0"
